cmake_minimum_required(VERSION 3.16)
# add_executable(new_structure new_structure.cpp)
# target_link_libraries(new_structure ${PROJECT_NAME})

# add_executable(calibration calibration.cpp)
# target_link_libraries(calibration ${PROJECT_NAME})

# add_executable(airfoil airfoil.cpp)
# target_link_libraries(airfoil ${PROJECT_NAME})

# add_executable(engine engine.cpp)
# target_link_libraries(engine ${PROJECT_NAME})

# add_executable(nrel1 nrel1.cpp)
# target_link_libraries(nrel1 ${PROJECT_NAME})
add_executable(reentry1 reentry1.cpp)
target_link_libraries(reentry1 ${PROJECT_NAME})

# add_executable(heteroskedastic heteroskedastic.cpp)
# target_link_libraries(heteroskedastic ${PROJECT_NAME})